edited the website design

--- a/css/style.css
+++ b/css/style.css
@@ -5,24 +5,18 @@ h1 {
     background-image: url("../images/background2.jpg");
     background-repeat : repeat;
     background-size : 25%;
-    font-weight: 900;
-    font-family : "Courier New";
+    font-family : "century gothic";
+    color : antiquewhite;
+    font-weight : 600px;
    }
 button { 
-background-color :rgb(160, 159, 159);
-border : 4px solid black ;
+background-color :transparent;
+border : 3px solid antiquewhite ;
 outline : 8px;
-color: rgb(236, 236, 236);
 height : 125%;
 width : 50%;
-border-radius : 5px
+border-radius : 5px;
+font-size : 18px;
+color : antiquewhite;
+font-weight : 600px;
 }
-
-/* .btn {
-    border: 2px solid black;
-    background-color: white;
-    color: black;
-    padding: 14px 28px;
-    font-size: 16px;
-    cursor: pointer;
-  } */
