--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h1 {
     font-size: 70px;
     font-weight : 600px;
   }
-button { 
+.btn-one{ 
 background-color :transparent;
 border : 3px solid antiquewhite ;
 outline : 8px;
@@ -19,5 +19,20 @@ width : 75%;
 border-radius : 5px;
 font-size : 18px;
 color : antiquewhite;
+}
+.btn-two { 
+background-color :transparent;
+border : 3px solid antiquewhite ;
+outline : 8px;
+height : 400%;
+width : 75%;
+border-radius : 5px;
+font-size : 18px;
+color : antiquewhite;
+
+}
+.jumbotron  {
+  margin-top : 2%;
+  background-color : transparent;
 }
 
