--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@ body {
   background-image: url("../images/background2.jpg");
   background-repeat : repeat;
   background-size : 25%;
-  font-family : "century gothic";
-  color : antiquewhite;
-  font-weight : 600px;
+  font-family :  verdana,"century gothic";
+  color : rgb(206, 193, 177);
+  font-weight : 600;
  }
 h1 {
     font-size: 70px;
@@ -12,27 +12,35 @@ h1 {
   }
 .btn-one{ 
 background-color :transparent;
-border : 3px solid antiquewhite ;
+border : 3px solid rgb(206, 193, 177) ;
 outline : 8px;
 height : 155%;
 width : 75%;
 border-radius : 5px;
 font-size : 18px;
-color : antiquewhite;
+color : rgb(206, 193, 177);
 }
 .btn-two { 
 background-color :transparent;
-border : 3px solid antiquewhite ;
+border : 3px solid rgb(206, 193, 177) ;
 outline : 8px;
-height : 400%;
+height : 200%;
 width : 75%;
 border-radius : 5px;
-font-size : 18px;
-color : antiquewhite;
-
+font-size : 25px;
+color : rgb(206, 193, 177);
+}
+button:active { 
+ background-color : rgb(51, 51, 51);
 }
 .jumbotron  {
   margin-top : 2%;
   background-color : transparent;
+  border-bottom : 3px solid rgb(206, 193, 177);
+  padding-bottom : 0%;
 }
 
+#tags { 
+  height : 10%;
+  background-color : red;
+}
