--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,26 @@ button:active {
 }
 .jumbotron  {
   margin-top : 2%;
+  padding-top : 0%;
   background-color : transparent;
-  border-bottom : 3px solid rgb(206, 193, 177);
+  border-bottom : 4px solid rgb(206, 193, 177);
   padding-bottom : 0%;
 }
 
 #tags { 
   height : 10%;
-  background-color : red;
+  background-color :red;
+}
+.portfolio { 
+padding-top: 2%;
+padding-bottom : 6%;
+background-color: rgb(56, 56, 56);
+border : 3px solid rgb(206, 193, 177);
+border-top : none;
+border-bottom-left-radius : 10px;
+border-bottom-right-radius : 10px;
+}
+
+row  {
+  margin-top: 7%;
 }
