--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,20 @@
-body {
-  background-image: url("../images/background2.jpg");
-  background-repeat : repeat;
-  background-size : 25%;
-  font-family :  verdana,"century gothic";
-  color : rgb(206, 193, 177);
-  font-weight : 600;
- }
-h1 {
-    font-size: 70px;
-    font-weight : 600px;
-  }
 .btn-one{ 
-background-color :transparent;
-border : 3px solid rgb(206, 193, 177) ;
-outline : 8px;
-height : 155%;
-width : 75%;
-border-radius : 5px;
-font-size : 18px;
-color : rgb(206, 193, 177);
+    background-color :transparent;
+    border : none ;
+    font-size : 22px;
+    color : rgb(0, 0, 0);
+    font-family:verdana,"century gothic";
+    padding : 10px;
+    margin : 0;
 }
-.btn-two { 
-background-color :transparent;
-border : 3px solid rgb(206, 193, 177) ;
-outline : 8px;
-height : 200%;
-width : 75%;
-border-radius : 5px;
-font-size : 25px;
-color : rgb(206, 193, 177);
+body { 
+    background-color :  rgb(241, 241, 241);
+    font-family : "verdana";
 }
-button:active { 
- background-color : rgb(51, 51, 51);
+.big { 
+    font-size: 350%;
 }
-.jumbotron  {
-  margin-top : 2%;
-  padding-top : 0%;
-  background-color : transparent;
-  border-bottom : 4px solid rgb(206, 193, 177);
-  padding-bottom : 0%;
-}
-
-#tags { 
-  height : 10%;
-  background-color :red;
-}
-.portfolio { 
-padding-top: 2%;
-padding-bottom : 6%;
-background-color: rgb(56, 56, 56);
-border : 3px solid rgb(206, 193, 177);
-border-top : none;
-border-bottom-left-radius : 10px;
-border-bottom-right-radius : 10px;
-}
-
-row  {
-  margin-top: 7%;
+#welcome { 
+    margin-top : 30%;
+    font-family : 'Times New Roman'
 }
