--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,16 @@
     padding : 10px;
     margin : 0;
 }
+.btn-two{ 
+    background-color :transparent;
+    border : rgb(240, 237, 225) solid 6px;
+    border-radius: 5px;
+    font-size : 22px;
+    color : rgb(0, 0, 0);
+    font-family:verdana,"century gothic";
+    padding : 10px;
+    margin : 0;
+}
 body { 
     background-color :  rgb(241, 241, 241);
     font-family : "verdana";
@@ -15,7 +25,45 @@ body {
 .big { 
     font-size: 350%;
 }
+h1 { 
+    font-family : 'Times New Roman';
+}
 #welcome { 
     margin-top : 30%;
-    font-family : 'Times New Roman'
+
 }
+
+#navbar { 
+    border-bottom : 2px solid;
+}
+
+.project{ 
+    background-color : white;
+    border-radius: 15px;
+    width: 300px;
+    height:300px;
+    margin: 15px;
+    justify-content: center;
+    text-align:center;
+    padding:30px;
+    padding-top:10px;
+}
+.project h1{ 
+    margin-top:0px;
+    text-decoration:underline;
+    font-size:1.9rem;
+}
+.project h2 { 
+    margin-top:10px;
+    font-size:1.0rem;
+    font-weight:bold;
+}
+.project p {
+    font-size:.9rem;
+
+}
+.git {
+    width : 60px;
+    height : 40px;
+}
+
