--- a/css/style.css
+++ b/css/style.css
@@ -40,13 +40,15 @@ h1 {
 .project{ 
     background-color : white;
     border-radius: 15px;
-    width: 300px;
-    height:300px;
+    width: 350px;
+    height:350px;
     margin: 15px;
     justify-content: center;
     text-align:center;
     padding:30px;
     padding-top:10px;
+    position: relative;
+    display:inline-block;
 }
 .project h1{ 
     margin-top:0px;
@@ -55,17 +57,63 @@ h1 {
 }
 .project h2 { 
     margin-top:10px;
-    font-size:1.0rem;
+    display :inline-block;
+    font-size:.9rem;
     font-weight:bold;
 }
 .project p {
-    font-size:.9rem;
+    font-size:.8rem;
+    display:inline-block;
 
 }
 .git {
     width : 60px;
     height : 40px;
+    position:absolute;
+    bottom:5px;
+    right:145px;
 }
 
 
 
+/* modal stuff */
+
+.bg-modal {
+	background-color: rgba(0, 0, 0, 0.8);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	display: none;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal-contents {
+	height: 300px;
+	width: 500px;
+	background-color: white;
+	text-align: center;
+	padding: 20px;
+	position: relative;
+	border-radius: 4px;
+}
+
+input {
+	margin: 15px auto;
+	display: block;
+	width: 50%;
+	padding: 8px;
+	border: 1px solid gray;
+}
+
+.close {
+	position: absolute;
+	top: 0;
+	right: 10px;
+	font-size: 42px;
+	color: #333;
+	transform: rotate(45deg);
+	cursor: pointer;
+
+}
