--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,8 @@ h1 {
 }
 
 .project{ 
-    background-color : white;
+    background-color : rgb(247, 247, 247);
+    border :rgb(236, 236, 236) solid ;
     border-radius: 15px;
     width: 350px;
     height:350px;
@@ -58,11 +59,11 @@ h1 {
 .project h2 { 
     margin-top:10px;
     display :inline-block;
-    font-size:.9rem;
+    font-size:.95rem;
     font-weight:bold;
 }
 .project p {
-    font-size:.8rem;
+    font-size:.9rem;
     display:inline-block;
 
 }
